# Basic-rust-webserver

./: Cargo.toml  README.md
.github/workflows/: static.yml
src/: main.rs  realTimeHandler.rs  real_time_handler.rs
static/: index.html
