[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
actix-web-actors = { version = "4" }
actix = { version = "0.13.0" }
actix-files = {version = "0.6.2"}
actix-http = {version = "3.0.0"}
actix-utils = {version = "3.0.0"}
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = "1.27.0"
bytes = "1.0"
bytestring = "1.3.0"